// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Tabs Controlled behaviour 1`] = `
.c3 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 > *:not(:first-child) {
  margin-top: 0;
  margin-left: 16px;
}

.c2 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c8 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c7 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6::after {
  content: '';
  background-color: #0046FF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

<span
  className="c0"
>
  <button
    onClick={[Function]}
    type="button"
  >
    Change state outside
  </button>
  <ul
    className="c1 c2"
  >
    <li
      className="c3"
      role="presentation"
    >
      <span
        className="c4"
      >
        <button
          aria-selected={true}
          className="c5"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="c6"
            height={8}
          >
            One
          </span>
        </button>
      </span>
    </li>
    <li
      className="c3"
      role="presentation"
    >
      <span
        className="c0"
      >
        <button
          aria-selected={false}
          className="c5"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="c7"
            height={8}
          >
            Two
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="c8"
  />
  <div>
    <section
      aria-labelledby="tabs-tab-0"
      hidden={false}
      id="tabs-tabpanel-0"
      role="tabpanel"
    >
      Ones children
    </section>
  </div>
</span>
`;

exports[`Storyshots Molecules | Tabs Default 1`] = `
.c3 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 > *:not(:first-child) {
  margin-top: 0;
  margin-left: 16px;
}

.c2 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c8 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c7 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6::after {
  content: '';
  background-color: #0046FF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

<span
  className="c0"
>
  <ul
    className="c1 c2"
  >
    <li
      className="c3"
      role="presentation"
    >
      <span
        className="c4"
      >
        <button
          aria-selected={true}
          className="c5"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="c6"
            height={8}
          >
            One
          </span>
        </button>
      </span>
    </li>
    <li
      className="c3"
      role="presentation"
    >
      <span
        className="c0"
      >
        <button
          aria-selected={false}
          className="c5"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="c7"
            height={8}
          >
            <div>
              Node as well
              <span
                aria-label="goodjob"
                role="img"
              >
                👍
              </span>
            </div>
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="c8"
  />
  <div>
    <section
      aria-labelledby="tabs-tab-0"
      hidden={false}
      id="tabs-tabpanel-0"
      role="tabpanel"
    >
      Ones children
    </section>
  </div>
</span>
`;

exports[`Storyshots Molecules | Tabs With conditionally hidden tab 1`] = `
.c4 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 > *:not(:first-child) {
  margin-top: 0;
  margin-left: 16px;
}

.c3 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c7 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c6 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c1 {
  padding: 0 20px;
}

<span
  className="c0"
>
  <ul
    className="c1 c2 c3"
  >
    <li
      className="c4"
      role="presentation"
    >
      <span
        className="c0"
      >
        <button
          aria-selected={false}
          className="c5"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="c6"
            height={8}
          >
            two
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="c7"
  />
  <div />
</span>
`;

exports[`Storyshots Molecules | Tabs With custom styling (like spacing) 1`] = `
.c4 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 > *:not(:first-child) {
  margin-top: 0;
  margin-left: 16px;
}

.c3 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c9 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c8 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  height: 32px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7::after {
  content: '';
  background-color: #0046FF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c10 {
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 16px;
}

.c1 {
  padding: 0 20px;
}

<span
  className="c0"
>
  <ul
    className="c1 c2 c3"
  >
    <li
      className="c4"
      role="presentation"
    >
      <span
        className="c5"
      >
        <button
          aria-selected={true}
          className="c6"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="c7"
            height={8}
          >
            One
          </span>
        </button>
      </span>
    </li>
    <li
      className="c4"
      role="presentation"
    >
      <span
        className="c0"
      >
        <button
          aria-selected={false}
          className="c6"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="c8"
            height={8}
          >
            two
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="c9"
  />
  <div>
    <section
      aria-labelledby="tabs-tab-0"
      hidden={false}
      id="tabs-tabpanel-0"
      role="tabpanel"
    >
      <div
        className="c10"
      >
        Ones children
      </div>
    </section>
  </div>
</span>
`;

exports[`Storyshots Molecules | Tabs With height modified 1`] = `
.c3 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 > *:not(:first-child) {
  margin-top: 0;
  margin-left: 16px;
}

.c2 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c8 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c6 {
  height: 44px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6::after {
  content: '';
  background-color: #0046FF;
  display: block;
  width: 100%;
  height: 2px;
  position: absolute;
  bottom: 0;
  left: 0;
}

.c7 {
  height: 44px;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.7142857142857142;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-weight: inherit;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

<span
  className="c0"
>
  <ul
    className="c1 c2"
  >
    <li
      className="c3"
      role="presentation"
    >
      <span
        className="c4"
      >
        <button
          aria-selected={true}
          className="c5"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="c6"
            height={11}
          >
            One
          </span>
        </button>
      </span>
    </li>
    <li
      className="c3"
      role="presentation"
    >
      <span
        className="c0"
      >
        <button
          aria-selected={false}
          className="c5"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="c7"
            height={11}
          >
            two
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="c8"
  />
  <div>
    <section
      aria-labelledby="tabs-tab-0"
      hidden={false}
      id="tabs-tabpanel-0"
      role="tabpanel"
    >
      Ones children
    </section>
  </div>
</span>
`;
